Sat Nov 29 06:22:36 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.h: implemented GBitMatrix, a couple inline functions to
	allow quick operations on a two dimensional bit array.

Fri Nov 28 03:37:16 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.h: preserve type safety in convenience functions for c++.

Fri Nov 28 02:57:56 2003  Tim Janik  <timj@gtk.org>

	* sfidl-cxx.cc: remove bogus generated includes.

Fri Nov 28 00:49:15 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.*: Records, sequences, choices, classes are covered now.
	So its reasonably usable binding (which can handle bse/bse.idl).

	* sfidl-generator.*: New createTypeCode model: MODEL_VCALL_CARG.
	Comments. Seperated choice conversion into a seperate function.

Thu Nov 27 00:55:40 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-cxx.*: New files: initial check-in of the C++ language binding.

	* Makefile.am: Added sfidl-cxx.*.

	* sfidl-generator.*: Moved more functionality to the base class, so
	that the C++ language binding can use it. Qt binding available again.

	* sfidl-options.* sfidl.cc: The target is now an enum. New --mixed and
	--lower options to specify the style of the identifiers used in the
	binding.

Wed Nov 26 22:07:49 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Moved common functionality of all C / C++
	language bindings into new parent class CodeGeneratorCBase. "Proxy" no
	longer accepted as type.

	* sfidl-parser.*: Added Parser::typeOf method returning an enum (moved
	from sfidl-module.cc).

	* sfidl-module.*: Cleanup ugly stuff by inheriting CodeGeneratorCBase
	and using Parser::typeOf method.

Wed Nov 26 13:37:17 2003  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.*: Cleanups.
	
	* sfidl-module.cc: More work on the language binding for records (use
	SmartPtr now).

Mon Nov 17 00:49:34 2003  Tim Janik  <timj@gtk.org>

	* glib-extra.[hc]: added g_strconcat_with_null() and defined