@@ -21,6 +21,59 @@
 #include "glib-extra.h"
 
 
+/* --- ref-counted strings --- */
+static GHashTable *refstrings_ht = NULL;
+G_LOCK_DEFINE_STATIC (refstrings_mutex);
+
+const gchar*
+g_strref (const gchar *string)
+{
+  guint32 *refp;
+  gpointer p;
+  if (!string)
+    return NULL;
+  G_LOCK (refstrings_mutex);
+  if (!refstrings_ht)
+    refstrings_ht = g_hash_table_new (g_str_hash, g_str_equal);
+  p = g_hash_table_lookup (refstrings_ht, string);
+  if (!p)
+    {
+      guint l = strlen (string);
+      p = g_new (char, 4 + l + 1);
+      refp = p;
+      *refp = 0;
+      refp++;
+      memcpy (refp, string, l + 1);
+    }
+  refp = p;
+  *refp = *refp + 1;
+  p = refp + 1;
+  G_UNLOCK (refstrings_mutex);
+  return p;
+}
+
+void
+g_strunref (const gchar *string)
+{
+  gpointer p;
+  if (!string)
+    return;
+  G_LOCK (refstrings_mutex);
+  p = refstrings_ht ? g_hash_table_lookup (refstrings_ht, string) : NULL;
+  if (p)
+    {
+      guint32 *refp = p;
+      *refp = *refp - 1;
+      if (!*refp)
+        g_hash_table_remove (refstrings_ht, string);
+      g_free (p);
+    }
+  G_UNLOCK (refstrings_mutex);
+  if (!p)
+    g_warning ("%s: invalid (non-ref-counted) string: %s", G_STRFUNC, string);
+}
+
+
 /* --- string functions --- */
 gchar**
 g_straddv (gchar      **str_array,
